syntax = "proto3";
package proto;
option go_package = "github.com/stevenkitter/weilu/proto";

// WXMessage incoming body message
// 用于解密微信的消息
message WXEncryptedMessage {
  string msg = 1;
  string msgSignature = 2;
  string timestamp = 3;
  string nonce = 4;
}
// WXTicketReq save the decrypted message
// 用于保存ticket
message WXTicketReq {
  string appID = 1;
  string infoType = 2;
  string component = 3;
}
// Base response struct
// 基本的返回值
message Resp {
  int32 code = 1;
  string msg = 2;
  string data = 3;
}

//GetTicketReq get the saved appid's ticket
message GetTicketReq {
  string appID = 1;
}
//GetAccessTokenReq get access token 第三平台的token
message GetAccessTokenReq {
  string appID = 1;
}

message GetPreAuthCodeReq {
  string appID = 1;
}

service WXService {
  rpc DecryptMsg(WXEncryptedMessage) returns (Resp);
  rpc TicketReceived(WXTicketReq) returns (Resp);
  rpc Ticket(GetTicketReq) returns (Resp);
  rpc AccessToken(GetAccessTokenReq) returns (Resp);
  rpc PreAuthCode(GetPreAuthCodeReq) returns (Resp);
}
